--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -154,20 +154,50 @@
   "codex.desc.pros_2": ["你的形态拥有这些力量"],
   "codex.desc.cons_2": ["同时，你的形态也有一些不便的地方…"],
   "codex.desc.instincts_2": ["你的本能不再困扰你，它们已经完全成为了你的一部分"],
-  "codex.form.original.title": ["整体而言，在其他人眼中，你是一个完全正常的人类"],
+
+  "codex.form.original.title": ["\n整体而言，你是一个正常的人类"],
   "codex.form.original.appearance": [" "],
   "codex.form.original.pros": [" "],
   "codex.form.original.cons": [" "],
   "codex.form.original.instincts": [" "],
-  "codex.form.bat0.title": ["\n整体而言，如果设法隐藏掉你身上的那些异常之处的话，其他人会认为你是一个有点奇怪的人类"],
-  "codex.form.bat0.appearance": ["你的手臂外侧延伸出了附有皮膜的附肢，感觉有点像蝙蝠\n你的尾骨也向外突出形成一条小小的尾部\n不过除此以外，它们似乎没有太多实际功能"],
+
+  "codex.form.axolotl0.title": ["\n诅咒对你的身体产生了一些可见的影响。除此之外，你有一种想要浸没在水中的冲动。"],
+  "codex.form.axolotl0.appearance": ["你的脸颊两侧生长出了几丛淡红色的簇状结构，它们总是处于潮湿状态，似乎能帮你补充一部分氧气\n你注意到波浪状的半透明鳍膜开始附着在你四肢的末端与新长出的尾部上\n你的皮肤似乎开始变得有些潮湿"],
+  "codex.form.axolotl0.pros": ["由于新的氧气供应，你可以在水下活动更长时间\n你的皮肤在水下的阻力更小，让你可以在水中移动的稍快一些"],
+  "codex.form.axolotl0.cons": ["你的皮肤更容易沾染沙土，稍微拖慢你在沙地上的移动速度"],
+  "codex.form.axolotl0.instincts": ["你开始想要",
+    {
+    "text":"待在水中", "color":"#c67681"
+    }],
+  "codex.form.axolotl1.title": ["\n生长后的腮与有力的尾部让你能够自由探索被淹没的结构。刚捕获的鱼类是最适合你的食物"],
+  "codex.form.axolotl1.appearance": ["你脸颊两侧的腮丛进一步生长。在水中，它们几乎可以供给你所需的所有氧气\n你身上的鳍膜进一步生长，覆盖了你身体的更多部分。它们的颜色似乎变得更加鲜艳了\n你的尾部进一步延长，变得更加强壮\n你的颈部生长出了吸水性很强的白色绒毛"],
+  "codex.form.axolotl1.pros": ["借助进一步发育的腮丛，你可以在水下呼吸，无需换气\n你在水中可以移动的稍快一些\n你的身体能更有效地消化生的鱼类，它们给与的饱食度更高\n借助有力的尾部，你可以从水面向空中跃起，到达高处"],
+  "codex.form.axolotl1.cons": ["你无法再装备头盔：你的腮丛无法忍受异物的碰触\n你的皮肤更容易沾染沙土，稍微拖慢你在沙地上的移动速度\n你目前的消化系统不再能消化非肉类的食物"],
+  "codex.form.axolotl1.instincts": ["你想要尽可能",
+    {
+      "text":"待在水中", "color":"#c67681"
+    },
+    {
+      "text":"\n食用更多生鱼肉", "color":"#c67681"
+    },"的想法开始吸引你",
+    {
+      "text":"\n在垂滴叶丛中漫游", "color":"#c67681"
+    },"的想法开始吸引你"],
+  "codex.form.axolotl2.title": ["\n作为两栖类的一员，你是水中的掠食者，同时也能在陆地上活动——只是务必记得保持湿润"],
+  "codex.form.axolotl2.appearance": ["你的尾部现在更接近你躯干的延伸，它几乎占据了身高的一半\n发达的腮丛占据了你头部的一大部分空间。它们几乎替代了肺部的作用，只要它们还处于湿润状态，你无需呼吸就能获得充沛的氧气\n半透明的鳍膜蔓延到了你身体的大部分区域。在水下，它们会随着波浪有节律地摆动\n白色的绒毛几乎覆盖了你的前胸与背部。它们能如同海绵一般储存水分，让你在陆地上也能长时间保持湿润"],
+  "codex.form.axolotl2.pros": ["由于对腮部呼吸的依赖，你必须时刻保持湿润——\n你的氧气值现在指示你的湿润度。它现在会在水中得到补充，并在陆地上缓慢消耗\n摄入水瓶或任何药水也可以补充湿润度\n\n你的身体从水中获得力量。在湿润度不为零时，你的最大生命值大幅提升\n\n生鱼给与更高的饱食度\n发达的鳍膜与强壮的尾部让你可以在水中移动的更快。它们能让你自由地跳出水面，也可以帮助你在水中悬浮，不再下沉\n四肢末端的钝爪增强你在水中的抓握力，让你可以在水下毫无阻碍地快速破坏方块\n身体结构的变化让你可以快速地爬行通过狭小的地方"],
+  "codex.form.axolotl2.cons": ["水分现在是你的生命线。当丧失湿润度时，你的最大生命值与移动速度均会大幅降低，让你几乎寸步难行\n\n你无法再装备头盔\n你在沙地上的移动速度更慢\n你只能食用肉类"],
+  "codex.form.axolotl2.instincts": [" "],
+
+  "codex.form.bat0.title": ["\n诅咒对你的身体产生了一些影响，让你看起来像某些翼手目的生物。你感到黑暗的环境在吸引着你。"],
+  "codex.form.bat0.appearance": ["你的手臂外侧延伸出了附有皮膜的附肢\n你的尾骨也向外突出形成一条小小的尾部\n不过除此以外，它们似乎没有太多实际功能"],
   "codex.form.bat0.pros": ["当处于暗处时，你感觉自己的行动更加敏捷"],
   "codex.form.bat0.cons": ["你无法装备胸甲了：你的新附肢让它们变得不再合身"],
   "codex.form.bat0.instincts": ["你开始想要",
     {
-    "text":"待在暗处", "color":"#c67681"
+      "text":"待在暗处", "color":"#c67681"
     }],
-  "codex.form.bat1.title": ["\n整体而言，其他人会认为你可能是某些外来种族"],
+  "codex.form.bat1.title": ["\n新的视觉与力量让你在洞穴与深夜的黑暗中游刃有余。现在，只是想到暴露在日光下的念头就会让你感到难受。"],
   "codex.form.bat1.appearance": ["你的耳朵现在位于头顶，它们变得又大又尖，朝向前方\n你的手臂外侧延伸出的膜翼进一步生长，在跳起时你发现你会不自觉地扇动它们\n你的手指现在的结构有点像爪子，让你无法进行精细的操作，不过你依然能够正常抓取物品\n你的脚趾向外延伸，变得又细又长\n你的尾部进一步变长了\n你似乎变小了一些"],
   "codex.form.bat1.pros": ["你现在可以在黑暗中清晰地分辨事物\n你的双臂变得更加有力，让你的近战攻击力得到了提升\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n当处于暗处时，你感觉自己的行动更加敏捷"],
   "codex.form.bat1.cons": ["你现在的手指结构让使用弓弩变成了奢望\n你的膜翼与新的脚趾结构让装备胸甲与鞋变得不再可能\n在阳光下时，你感觉自己变得更加虚弱与迟缓\n你的身体似乎不再适合消化肉食，它们给与的饱食度更少"],
@@ -181,7 +211,7 @@
     {
       "text":"\n被滴水石块围绕", "color":"#c67681"
     },"的想法开始吸引你"],
-  "codex.form.bat2.title": ["\n整体而言，其他人会认为你完全是一只大的奇怪的蝙蝠"],
+  "codex.form.bat2.title": ["\n作为翼手目生物的一员，你喜欢和你的同类一起在夜空中滑翔。"],
   "codex.form.bat2.appearance": ["你的耳朵现在占据了你头顶的大部分空间，让你能够分辨周围最细微的声音\n你的脸部向前形成了短小的口鼻，你能够感觉到其中尖利的小牙齿\n你的手臂完全变成了膜翼的一部分。虽然你的重量依然不足以让你自由飞行，不过它们对于缓降与俯冲是绰绰有余的\n你的前爪不再适合使用笨重的工具和武器\n新的脚爪、趾行的腿部与保持平衡的长尾让你适于俯冲与滑翔。不过在一些努力下，你依然能够用它们奔跑\n在阴冷的洞窟中，你身体上覆盖的绒毛可以有效维持温暖"],
   "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n你的体型已经足够小，让你可以挤入一格的空间中"],
   "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
